# vibeshooter

./: .gitignore  Cargo.toml  README.md
client/: index.html  package.json  tsconfig.json
client/src/: main.ts  protocol.ts  styles.css
crates/server/: Cargo.toml
crates/server/src/: main.rs  protocol.rs  server.rs  sim.rs  world.rs
