[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
rapier3d = "0.22"
nalgebra = "0.33"
axum = { version = "0.7", features = ["ws", "json"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "net"] }
